--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         software engineer</p>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="/portfolio/img/WhatsApp Image 2024-02-03 at 3.37.10 AM.jpeg" alt="Umesh" class="img-fluid"
+                    <img src="./img/WhatsApp Image 2024-02-03 at 3.37.10 AM.jpeg" alt="Umesh" class="img-fluid"
                         style="max-height: 400px;">
                 </div>
 
