added all  path

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h4 class="text-center pb-5">Skills</h4>
                 <div class="col-md-3">
                     <div class="card text-center pb-5 h-100">
-                        <img src="/portfolio/img/html.png" class="card-img-top w-25 m-auto pt-4" alt="html">
+                        <img src="./img/html.png" class="card-img-top w-25 m-auto pt-4" alt="html">
                         <div class="card-body d-flex flex-column justify-content-between">
                             <h5 class="card-title">HTML</h5>
                             <p class="card-text">HTML (Hypertext Markup Language) is the backbone of web development, providing the structure and semantics for web pages. I'm proficient in creating clean and semantic HTML code, ensuring accessibility and SEO best practices.</p>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card text-center pb-5 h-100">
-                        <img src="/portfolio/img/css.png" class="card-img-top w-25 m-auto pt-4" alt="css">
+                        <img src="./img/css.png" class="card-img-top w-25 m-auto pt-4" alt="css">
                         <div class="card-body d-flex flex-column justify-content-between">
                             <h5 class="card-title">CSS</h5>
                             <p class="card-text">CSS (Cascading Style Sheets) is used to style web pages and create visually appealing layouts. I'm experienced in CSS techniques such as flexbox, grid, and responsive design.</p>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card text-center pb-5 h-100">
-                        <img src="/portfolio/img/java.png" class="card-img-top w-25 m-auto pt-4" alt="java">
+                        <img src="./img/java.png" class="card-img-top w-25 m-auto pt-4" alt="java">
                         <div class="card-body d-flex flex-column justify-content-between">
                             <h5 class="card-title">Java</h5>
                             <p class="card-text">Java is a powerful, object-oriented programming language used for developing a wide range of applications, from web and mobile apps to enterprise systems. I have extensive experience in Java development, including backend services and enterprise applications.</p>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card text-center pb-5 h-100">
-                        <img src="/portfolio/img/sql.png" class="card-img-top w-25 m-auto pt-4" alt="java">
+                        <img src="./img/sql.png" class="card-img-top w-25 m-auto pt-4" alt="java">
                         <div class="card-body d-flex flex-column justify-content-between">
                             <h5 class="card-title">Sql</h5>
                             <p class="card-text">SQL (Structured Query Language) is essential for managing and manipulating data in relational databases. I'm proficient in writing complex SQL queries, optimizing database performance, and designing relational database schemas.</p>
