--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-secondary py-3 text-uppercase border-bottom border border-secondary sticky-top">
+    <nav
+        class="navbar navbar-expand-lg bg-secondary py-3 text-uppercase border-bottom border border-secondary sticky-top">
         <div class="container">
             <a class="navbar-brand text-white fs-3" href="#">Umesh Kumar.K</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -41,16 +42,25 @@
             </div>
         </div>
     </nav>
-    <section class=" banner text-center text-uppercase">
-        <div class="container">
+    <section class=" banner text-center text-uppercase ">
+        <div class="container ">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="w-100 m-auto">
-                        <h1 class="pb-3">HI MY NAME IS UMESH KUMAR K </h1>
-                        <h4 class="pb-4">I am a Full Stack Developer,I have a Skills
-                             on Development-Java-C-Css-Html-Javascript-jQuery-Sql</h4>
-                             <a href="https://wa.me/+919003946552?text=Hi%20Umesh%21%21%21" target="_blank" class="btn btn-dark btn-lg text-uppercase">Connect with me</a>
-                  
+                    <div class="w-75 m-auto ">
+                        <h1 id="intro">Umesh Kumar, in training! Exploring HTML, CSS, and JavaScript with a passion for
+                            web development.
+
+                            <h5>FULL STACK DEVELOPER</h5>
+                            <h6>Feedback and coffee always welcome!!!</h6>
+
+                        </h1>
+                        <h4 id="expertise">Building Web Applications, Front-End to Back-End</h4>
+                        <h4 id="skills">Java, JavaScript, SQL: Your Web Solutions Architect</h4>
+                        <h4 id="passion">Crafting Pixel-Perfect & Efficient Web Experiences</h4>
+                        <h5 id="value">Turning Ideas into Reality: Your Full Stack Partner</h5>
+                        <a href="https://wa.me/+919003946552?text=Hi%20Umesh%21%21%21" target="_blank"
+                            class="btn btn-dark btn-lg text-uppercase">Connect with me</a>
+
                     </div>
                 </div>
             </div>
@@ -86,7 +96,9 @@
                         <img src="./img/html.png" class="card-img-top w-25 m-auto pt-4" alt="html">
                         <div class="card-body d-flex flex-column justify-content-between">
                             <h5 class="card-title">HTML</h5>
-                            <p class="card-text">HTML (Hypertext Markup Language) is the backbone of web development, providing the structure and semantics for web pages. I'm proficient in creating clean and semantic HTML code, ensuring accessibility and SEO best practices.</p>
+                            <p class="card-text">HTML (Hypertext Markup Language) is the backbone of web development,
+                                providing the structure and semantics for web pages. I'm proficient in creating clean
+                                and semantic HTML code, ensuring accessibility and SEO best practices.</p>
                         </div>
                     </div>
                 </div>
@@ -95,7 +107,9 @@
                         <img src="./img/css.png" class="card-img-top w-25 m-auto pt-4" alt="css">
                         <div class="card-body d-flex flex-column justify-content-between">
                             <h5 class="card-title">CSS</h5>
-                            <p class="card-text">CSS (Cascading Style Sheets) is used to style web pages and create visually appealing layouts. I'm experienced in CSS techniques such as flexbox, grid, and responsive design.</p>
+                            <p class="card-text">CSS (Cascading Style Sheets) is used to style web pages and create
+                                visually appealing layouts. I'm experienced in CSS techniques such as flexbox, grid, and
+                                responsive design.</p>
                         </div>
                     </div>
                 </div>
@@ -104,7 +118,10 @@
                         <img src="./img/java.png" class="card-img-top w-25 m-auto pt-4" alt="java">
                         <div class="card-body d-flex flex-column justify-content-between">
                             <h5 class="card-title">Java</h5>
-                            <p class="card-text">Java is a powerful, object-oriented programming language used for developing a wide range of applications, from web and mobile apps to enterprise systems. I have extensive experience in Java development, including backend services and enterprise applications.</p>
+                            <p class="card-text">Java is a powerful, object-oriented programming language used for
+                                developing a wide range of applications, from web and mobile apps to enterprise systems.
+                                I have extensive experience in Java development, including backend services and
+                                enterprise applications.</p>
                         </div>
                     </div>
                 </div>
@@ -113,14 +130,16 @@
                         <img src="./img/sql.png" class="card-img-top w-25 m-auto pt-4" alt="java">
                         <div class="card-body d-flex flex-column justify-content-between">
                             <h5 class="card-title">Sql</h5>
-                            <p class="card-text">SQL (Structured Query Language) is essential for managing and manipulating data in relational databases. I'm proficient in writing complex SQL queries, optimizing database performance, and designing relational database schemas.</p>
+                            <p class="card-text">SQL (Structured Query Language) is essential for managing and
+                                manipulating data in relational databases. I'm proficient in writing complex SQL
+                                queries, optimizing database performance, and designing relational database schemas.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    
+
     <section id="contact" class="bg-dark text-white skills-padding">
         <div class="container">
             <div class="row">
@@ -130,14 +149,13 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-7">
-                    <form>
+                    <form id="contactForm">
                         <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="exampleInputName"
-                                aria-describedby="nameHelp">
+                            <label for="exampleInputName" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp">
                         </div>
                         <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Mobile</label>
+                            <label for="exampleInputMobile" class="form-label">Mobile</label>
                             <input type="number" class="form-control" id="exampleInputMobile"
                                 aria-describedby="mobileHelp">
                         </div>
@@ -145,32 +163,37 @@
                             <label for="exampleInputEmail1" class="form-label">Email address</label>
                             <input type="email" class="form-control" id="exampleInputEmail1"
                                 aria-describedby="emailHelp">
-
                         </div>
                         <div class="mb-3">
-                            <label for="exampleFormControlTextarea1" class="form-label"> textarea</label>
+                            <label for="exampleFormControlTextarea1" class="form-label">Message</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                         </div>
-
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>
             </div>
         </div>
     </section>
+
+    </div>
+    </div>
+    </div>
+    </section>
     <footer class="py-3">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p class="text-center m-0">Copyright:2024.@Designed and Developed by Me❤️</p>
+                    <p class="text-center m-0">Copyright: 2024. Designed and Developed by Me❤️</p>
                 </div>
             </div>
         </div>
     </footer>
+
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+    crossorigin="script.js"></script>
+
 
 </html>
