--- a/index.html
+++ b/index.html
@@ -42,28 +42,27 @@
             </div>
         </div>
     </nav>
-    <section class=" banner text-center text-uppercase ">
-        <div class="container ">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="w-75 m-auto ">
-                        <h1 id="intro">Umesh Kumar, in training! Exploring HTML, CSS, and JavaScript with a passion for
-                            web development.
+    <section class=" banner text-center text-uppercase >
+        <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="w-75 m-auto ">
+                    <h1 id="intro">Umesh Kumar, in training! Exploring HTML, CSS, and JavaScript with a passion for web development.
 
-                            <h5>FULL STACK DEVELOPER</h5>
-                            <h6>Feedback and coffee always welcome!!!</h6>
+                           <h5>FULL STACK DEVELOPER</h5>
+                           <h6>Feedback and coffee always welcome!!!</h6>
 
-                        </h1>
-                        <h4 id="expertise">Building Web Applications, Front-End to Back-End</h4>
-                        <h4 id="skills">Java, JavaScript, SQL: Your Web Solutions Architect</h4>
-                        <h4 id="passion">Crafting Pixel-Perfect & Efficient Web Experiences</h4>
-                        <h5 id="value">Turning Ideas into Reality: Your Full Stack Partner</h5>
-                        <a href="https://wa.me/+919003946552?text=Hi%20Umesh%21%21%21" target="_blank"
-                            class="btn btn-dark btn-lg text-uppercase">Connect with me</a>
+                    </h1>
+                    <h4 id="expertise">Building Web Applications, Front-End to Back-End</h4>
+                    <h4 id="skills">Java, JavaScript, SQL: Your Web Solutions Architect</h4>
+                    <h4 id="passion">Crafting Pixel-Perfect & Efficient Web Experiences</h4>
+                    <h5 id="value">Turning Ideas into Reality: Your Full Stack Partner</h5>
+                    <a href="https://wa.me/+919003946552?text=Hi%20Umesh%21%21%21" target="_blank"
+                        class="btn btn-dark btn-lg text-uppercase">Connect with me</a>
 
-                    </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
     <section id="about" class="py-5">
@@ -156,13 +155,11 @@
                         </div>
                         <div class="mb-3">
                             <label for="exampleInputMobile" class="form-label">Mobile</label>
-                            <input type="number" class="form-control" id="exampleInputMobile"
-                                aria-describedby="mobileHelp">
+                            <input type="number" class="form-control" id="exampleInputMobile" aria-describedby="mobileHelp">
                         </div>
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                         </div>
                         <div class="mb-3">
                             <label for="exampleFormControlTextarea1" class="form-label">Message</label>
@@ -174,10 +171,10 @@
             </div>
         </div>
     </section>
-
-    </div>
-    </div>
-    </div>
+    
+                </div>
+            </div>
+        </div>
     </section>
     <footer class="py-3">
         <div class="container">
@@ -188,12 +185,12 @@
             </div>
         </div>
     </footer>
-
+    
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="script.js"></script>
-
+    crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
 </html>
