Adding thee  prcts

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="w-75 m-auto ">
-                    <h1 id="intro">Umesh Kumar, in training! Exploring HTML, CSS, and JavaScript with a passion for web development.
+                    <h1>Umesh Kumar, in training! Exploring HTML, CSS, and JavaScript with a passion for web development.
 
                            <h5>FULL STACK DEVELOPER</h5>
                            <h6>Feedback and coffee always welcome!!!</h6>
 
                     </h1>
-                    <h4 id="expertise">Building Web Applications, Front-End to Back-End</h4>
-                    <h4 id="skills">Java, JavaScript, SQL: Your Web Solutions Architect</h4>
-                    <h4 id="passion">Crafting Pixel-Perfect & Efficient Web Experiences</h4>
+                    <h4>Building Web Applications, Front-End to Back-End</h4>
+                    <h4>"skills">Java, JavaScript, SQL: Your Web Solutions Architect</h4>
+                    <h4>Crafting Pixel-Perfect & Efficient Web Experiences</h4>
                     <h5 id="value">Turning Ideas into Reality: Your Full Stack Partner</h5>
                     <a href="https://wa.me/+919003946552?text=Hi%20Umesh%21%21%21" target="_blank"
                         class="btn btn-dark btn-lg text-uppercase">Connect with me</a>
